CSS to fix resume btn on small screens

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -393,6 +393,7 @@ h4 {
             bottom: 0;
             left: 50%;
             transform: translate(-50%, 0%);
+            text-align: center;
         }
         
         .resume-btn:hover {
